build: Change to java 17